--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -7,7 +7,6 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     {% block styles %}{% endblock %}
@@ -16,7 +15,6 @@
 <body>
     <!-- Include the Navbar -->
     {% include 'ext/navbar.html' %}
-
     <div class="container">
         {% block content %}{% endblock %}
     </div>
@@ -24,6 +22,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Custom JS -->
+    {% block scripts %}{% endblock %}
 </body>
 
 </html>
