--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,11 +21,11 @@
             <a href="{{ url_for('silver_calculator') }}" class="btn btn-custom">Go to Silver Calculator</a>
         </div>
         <!-- Add more cards as needed -->
-        <div class="card">
+        <!-- <div class="card">
             <h2>Other Calculator</h2>
             <p>Explore other pricing calculators that might be available.</p>
             <a href="{{ url_for('other_calculators') }}" class="btn btn-custom">Go to Other Calculator</a>
-        </div>
+        </div> -->
     </div>
 </div>
 {% endblock %}
