--- a/templates/silver_bill.html
+++ b/templates/silver_bill.html
@@ -42,6 +42,7 @@
             <div class="text-center">
                 <a href="{{ url_for('silver_calculator') }}" class="btn btn-custom mt-3">Calculate Again</a>
                 <a href="{{ url_for('gold_calculator') }}" class="btn btn-custom mt-3">Gold Calculator</a>
+                <button onclick="window.print()" class="btn btn-primary mt-3">Print PDF</button>
             </div>
         </div>
         <!-- Disclaimer -->
