--- a/templates/gold_calculator.html
+++ b/templates/gold_calculator.html
@@ -48,7 +48,7 @@
                 <input type="number" step="0.01" name="tax" id="tax" class="form-control" placeholder="Enter tax percentage" value="{{ tax }}" required>
             </div>
             
-            <button type="submit" class="btn btn-primary btn-block mt-4">Generate Bill</button>
+            <button type="submit" class="btn btn-primary btn-block mt-4">Generate Estimate Bill</button>
         </form>
         
     </div>
