--- a/templates/silver_bill.html
+++ b/templates/silver_bill.html
@@ -8,13 +8,13 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="bill-card">
-            <h2>Calcualtion Detials (Silver)</h2>
+            <h2>Calculation Details (Silver)</h2>
             <div class="details">
                 <span><strong>Silver Item Weight:</strong></span>
                 <span>{{ weight }} grams</span>
             </div>
             <div class="details">
-                <span><strong>Price(gm)</strong></span>
+                <span><strong>Price(gm):</strong></span>
                 <span>₹{{ price_per_gram }}</span>
             </div>
             <div class="details">
