--- a/templates/silver_calculator.html
+++ b/templates/silver_calculator.html
@@ -31,7 +31,7 @@
                 <label for="tax">Tax (%):</label>
                 <input type="number" id="tax" name="tax" step="0.1" value="{{ tax }}" class="form-control">
             </div>
-            <button type="submit" class="btn btn-custom btn-block">Generate Bill</button>
+            <button type="submit" class="btn btn-custom btn-block">Generate Estimate Bill</button>
         </form>
     </div>
 
