--- a/templates/silver_bill.html
+++ b/templates/silver_bill.html
@@ -14,7 +14,7 @@
                 <span>{{ weight }} grams</span>
             </div>
             <div class="details">
-                <span><strong>Price(gm):</strong></span>
+                <span><strong>Price(per gm):</strong></span>
                 <span>₹{{ price_per_gram }}</span>
             </div>
             <div class="details">
