--- a/templates/ext/navbar.html
+++ b/templates/ext/navbar.html
@@ -1,25 +1,13 @@
-<!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-custom">
     <a class="navbar-brand" href="/">Homepage</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/features">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/pricing">Pricing</a>
-            </li>
-            <!-- about -->
-            <li class="nav-item">
-                <a class="nav-link" href="/about">About</a>
-            </li>
-            <!-- <li class="nav-item">
-                    <a class="nav-link disabled" href="/about" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
+            <li class="nav-item"><a class="nav-link" href="/features">Features</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
         </ul>
     </div>
 </nav>
