--- a/templates/gold_calculator.html
+++ b/templates/gold_calculator.html
@@ -1,22 +1,20 @@
 {% extends "base/base.html" %}
 {% block title %} Gold Price Calculator {% endblock %}
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/gold_calculator.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/calculator.css') }}">
 {% endblock %}
 {% block content %}
 <div class="container">
     <!-- Main Content -->
     <div class="main-content">
+        <!-- Calculator Form -->
         <h1>Gold Price Calculator</h1>
         <p class="text-center">It's quick, easy, and accurate! with a clear and intuitive design.</p>
-        
-        <!-- Calculator Form -->
-        <form action="/gold-calculator" method="POST" class="shadow p-4 bg-white rounded">
+        <form action="/gold-calculator" method="POST" class="form-card shadow p-4 bg-white rounded">
             <div class="form-group">
                 <label for="weight">Weight (grams):</label>
                 <input type="number" step="0.01" name="weight" id="weight" class="form-control" placeholder="Enter weight in grams" required>
             </div>
-            
             <div class="form-group">
                 <label>Gold Purity:</label>
                 <div class="form-check">
@@ -31,8 +29,7 @@
                     <input type="radio" name="purity" value="24k" id="24k" class="form-check-input">
                     <label for="24k" class="form-check-label">24k</label>
                 </div>
-            </div>
-            
+            </div>            
             <div class="form-group">
                 <label for="price_per_gram">Price per gram (INR):</label>
                 <input type="number" step="0.01" name="price_per_gram" id="price_per_gram" class="form-control" placeholder="Enter price per gram" value="{{ price_per_gram }}" required>
@@ -42,23 +39,23 @@
                 <label for="service_charge">Service Charge (%):</label>
                 <input type="number" step="0.01" name="service_charge" id="service_charge" class="form-control" placeholder="Enter service charge percentage" value="{{ service_charge }}" required>
             </div>
-            
             <div class="form-group">
                 <label for="tax">Tax (%):</label>
                 <input type="number" step="0.01" name="tax" id="tax" class="form-control" placeholder="Enter tax percentage" value="{{ tax }}" required>
             </div>
-            
-            <button type="submit" class="btn btn-primary btn-block mt-4">Generate Estimate Bill</button>
+            <button type="submit" class="btn btn-hero btn-block mt-4">Generate Estimate Bill</button>
         </form>
-        
     </div>
-
     <!-- Sidebar -->
     <div class="sidebar">
         <h2>Jeweler Details</h2>
-        <p><strong>Name:</strong> {{ config['JEWELLER_NAME'] }}</p>
-        <p><strong>Address:</strong> {{ config['JEWELLER_ADDRESS'] }}</p>
-        <p><strong>Contact:</strong> {{ config['JEWELLER_CONTACT'] }}</p>
+        <p><strong>Name:</strong> {{ config["JEWELLER_NAME"] }}</p>
+        <p><strong>Address:</strong> {{ config["JEWELLER_ADDRESS"] }}</p>
+        <p><strong>Contact:</strong> {{ config["JEWELLER_CONTACT"] }}</p>
+        <p><strong>Email:</strong> {{ config["JEWELLER_EMAIL"] }}</p>
+        <p><strong>Website:</strong> {{ config["JEWELLER_WEBSITE"] }}</p>
+        <p><strong>GSTIN:</strong> {{ config["JEWELLER_GSTIN"] }}</p>
+        <p><strong>Gold Rate(Per gm):</strong> ₹ {{ price_per_gram }} </p>
     </div>
 </div>
 {% endblock %}
