--- a/templates/ext/navbar.html
+++ b/templates/ext/navbar.html
@@ -1,13 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <a class="navbar-brand" href="/">Homepage</a>
+    <a class="navbar-brand" href="/">
+        <i class="fas fa-home"></i>
+        Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/features">Features</a></li>
-            <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
-            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        </ul>
-    </div>
+    
 </nav>
