--- a/templates/gold_calculator.html
+++ b/templates/gold_calculator.html
@@ -12,11 +12,11 @@
         <p class="text-center">It's quick, easy, and accurate! with a clear and intuitive design.</p>
         <form action="/gold-calculator" method="POST" class="form-card shadow p-4 bg-white rounded">
             <div class="form-group">
-                <label for="weight">Weight (grams):</label>
+                <label for="weight">Weight (grams): <i class="fa-solid fa-scale-balanced"></i></label>
                 <input type="number" step="0.01" name="weight" id="weight" class="form-control" placeholder="Enter weight in grams" required>
             </div>
             <div class="form-group">
-                <label>Gold Purity:</label>
+                <label>Gold Purity: <i class="fa-solid fa-magnifying-glass"></i></label>
                 <div class="form-check">
                     <input type="radio" name="purity" value="18k" id="18k" class="form-check-input">
                     <label for="18k" class="form-check-label">18k</label>
@@ -31,16 +31,16 @@
                 </div>
             </div>            
             <div class="form-group">
-                <label for="price_per_gram">Price per gram (INR):</label>
+                <label for="price_per_gram">Price per gram (INR): <i class="fa-solid fa-weight-hanging"></i></label>
                 <input type="number" step="0.01" name="price_per_gram" id="price_per_gram" class="form-control" placeholder="Enter price per gram" value="{{ price_per_gram }}" required>
             </div>
             
             <div class="form-group">
-                <label for="service_charge">Service Charge (%):</label>
+                <label for="service_charge">Service Charge (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
                 <input type="number" step="0.01" name="service_charge" id="service_charge" class="form-control" placeholder="Enter service charge percentage" value="{{ service_charge }}" required>
             </div>
             <div class="form-group">
-                <label for="tax">Tax (%):</label>
+                <label for="tax">Tax (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
                 <input type="number" step="0.01" name="tax" id="tax" class="form-control" placeholder="Enter tax percentage" value="{{ tax }}" required>
             </div>
             <button type="submit" class="btn btn-hero btn-block mt-4">Generate Estimate Bill</button>
@@ -49,6 +49,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <h2>Jeweler Details</h2>
+        <img src="{{ url_for('static', filename=config['JEWELLER_LOGO']) }}" alt="Jeweler Logo" class="img-fluid" style="max-width: 200px;">
         <p><strong>Name:</strong> {{ config["JEWELLER_NAME"] }}</p>
         <p><strong>Address:</strong> {{ config["JEWELLER_ADDRESS"] }}</p>
         <p><strong>Contact:</strong> {{ config["JEWELLER_CONTACT"] }}</p>
