--- a/templates/silver_bill.html
+++ b/templates/silver_bill.html
@@ -53,6 +53,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <h2>Jeweler Details</h2>
+        <img src="{{ url_for('static', filename=config['JEWELLER_LOGO']) }}" alt="Jeweler Logo" class="img-fluid" style="max-width: 200px;">
         <p><strong>Name:</strong> {{ config["JEWELLER_NAME"] }}</p>
         <p><strong>Address:</strong> {{ config["JEWELLER_ADDRESS"] }}</p>
         <p><strong>Contact:</strong> {{ config["JEWELLER_CONTACT"] }}</p>
