--- a/templates/silver_calculator.html
+++ b/templates/silver_calculator.html
@@ -11,23 +11,23 @@
         <p class="text-center">Get accurate silver prices with our easy-to-use calculator!</p>
         <form action="/silver-calculator" method="POST" class="shadow p-4 bg-white rounded">
             <div class="form-group">
-                <label for="weight">Weight (grams):</label>
+                <label for="weight">Weight (grams): <i class="fa-solid fa-scale-balanced"></i></label>
                 <input type="number" id="weight" name="weight" step="0.01" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="purity">Purity (%):</label>
+                <label for="purity">Purity (%): <i class="fa-solid fa-magnifying-glass"></i></label>
                 <input type="number" id="purity" name="purity" step="0.1" max="100" min="0" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="price_per_gram">Price(per gm) (₹):</label>
+                <label for="price_per_gram">Price(per gm) (₹): <i class="fa-solid fa-weight-hanging"></i></label>
                 <input type="number" id="price_per_gram" name="price_per_gram" step="0.01" class="form-control" value="{{ price_per_gram }}" required>
             </div>
             <div class="form-group">
-                <label for="service_charge">Service Charge (%):</label>
+                <label for="service_charge">Service Charge (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
                 <input type="number" id="service_charge" name="service_charge" step="0.1" value="{{ service_charge }}" class="form-control">
             </div>
             <div class="form-group">
-                <label for="tax">Tax (%):</label>
+                <label for="tax">Tax (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
                 <input type="number" id="tax" name="tax" step="0.1" value="{{ tax }}" class="form-control">
             </div>
             <button type="submit" class="btn btn-custom btn-block">Generate Estimate Bill</button>
@@ -37,6 +37,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <h2>Jeweler Details</h2>
+        <img src="{{ url_for('static', filename=config['JEWELLER_LOGO']) }}" alt="Jeweler Logo" class="img-fluid" style="max-width: 200px;">
         <p><strong>Name:</strong> {{ config['JEWELLER_NAME'] }}</p>
         <p><strong>Address:</strong> {{ config['JEWELLER_ADDRESS'] }}</p>
         <p><strong>Contact:</strong> {{ config['JEWELLER_CONTACT'] }}</p>
