chore: link updated

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,8 +10,8 @@
     <div class="hero-buttons">
         <a href="{{ url_for('gold_calculator') }}" class="btn btn-hero"><i class="fa-solid fa-coins"></i> Gold Calculator</a>
         <a href="{{ url_for('silver_calculator') }}" class="btn btn-hero"><i class="fa-solid fa-gem"></i> Silver Calculator</a>
-        <a href="{{ url_for('silver_calculator') }}" class="btn btn-hero"><i class="fa-solid fa-medal"></i> Features</a>
-        <a href="{{ url_for('silver_calculator') }}" class="btn btn-hero"><i class="fa-solid fa-money-check-dollar"></i> Pricing</a>
+        <a href="{{ url_for('features') }}" class="btn btn-hero"><i class="fa-solid fa-medal"></i> Features</a>
+        <a href="{{ url_for('pricing') }}" class="btn btn-hero"><i class="fa-solid fa-money-check-dollar"></i> Pricing</a>
     </div>
 </div>
 {% endblock %}
